force-app/main/default/objects/Contractdeposit__c/Contractdeposit__c.object-meta.xml
<CustomObject>
    <label>Contract Deposit</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Deposit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>