force-app/main/default/objects/Contractdeposit__c/fields/Purchase_Contract__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Contract__c</fullName>
    <label>Purchase Contract</label>
    <referenceTo>Purchase_contract__c</referenceTo>
    <relationshipLabel>Contract Deposit</relationshipLabel>
    <relationshipName>Contract_Deposit</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>