force-app/main/default/objects/Contractdeposit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Purchase_Contract__c</columns>
    <columns>Amount__c</columns>
    <columns>Deposit_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>